fix: inclusao descricao

--- a/01_ajustes_de_modelo.ipynb
+++ b/01_ajustes_de_modelo.ipynb
@@ -457,6 +457,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "268862a5",
+   "metadata": {},
+   "source": [
+    "**Overfitting** ocorre quando um modelo é **complexo demais** e acaba aprendendo não apenas os padrões reais dos dados, mas também o **ruído** presente no conjunto de treino.\n",
+    "\n",
+    "Nesse cenário, o modelo apresenta um **ótimo desempenho** nos dados de **treino**, mas **generaliza mal** para **novos dados**, resultando em erros elevados no conjunto de teste.\n",
+    "\n",
+    "Quando isso acontece, é possível perceber algumas características:\n",
+    "- Erro baixo no treino\n",
+    "- Erro alto no teste\n",
+    "- Grande diferença entre treino e teste\n",
+    "- Modelo com variância alta\n",
+    "\n",
+    "O Overfitting pode vir a ocorrer quando:\n",
+    "- Modelo complexo demais\n",
+    "- Excesso de features\n",
+    "- Poucos dados de treino\n",
+    "- Treinamento por muitas épocas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "0d8f4988",
