fix: corrigindo texto e incluindo conclusao

--- a/01_ajustes_de_modelo.ipynb
+++ b/01_ajustes_de_modelo.ipynb
@@ -305,7 +305,7 @@
    "id": "7d13c964",
    "metadata": {},
    "source": [
-    "Utilizando o modelo **Polinomial** na análise de **Regressão Linear** podemos ver os erros com base nos conjuntos de treino e de teste com **menos viés** e **menor variância**."
+    "Utilizando o modelo **Polinomial** na análise de **Regressão Linear** podemos ver os erros com base nos conjuntos de treino e de teste com **menos viés** e uma **maior variância**."
    ]
   },
   {
@@ -620,6 +620,18 @@
     "| Treino ↓ e Teste ↑                | Overfitting     |\n",
     "| Treino ≈ Teste (ambos altos)      | Underfitting    |\n",
     "| Treino ≈ Teste (ambos baixos)     | OK      |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16cb1c36",
+   "metadata": {},
+   "source": [
+    "Em conclusão, o overfitting e o underfitting representam desafios centrais no desenvolvimento de modelos de machine learning, especialmente quando se trabalha com dados reais, que muitas vezes são ruidosos, desbalanceados ou insuficientes. Ambos os problemas comprometem a confiabilidade das previsões e evidenciam a importância de compreender bem a relação entre dados, modelo e complexidade.\n",
+    "\n",
+    "Para mitigar esses problemas, algumas estratégias podem ser adotadas, como a escolha adequada da complexidade do modelo, o uso de técnicas de regularização, validação cruzada e aumento da quantidade ou da qualidade dos dados.\n",
+    "\n",
+    "Além disso, práticas como seleção de features, balanceamento de classes e ajuste de hiperparâmetros contribuem para um melhor equilíbrio entre viés e variância. Dessa forma, é possível construir modelos mais robustos, capazes de generalizar melhor para novos dados e fornecer resultados mais consistentes e confiáveis."
    ]
   }
  ],
